Add conclusion to UR5_IK notebook

--- a/UR5_IK.ipynb
+++ b/UR5_IK.ipynb
@@ -10701,6 +10701,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusiones de los métodos de cinemática inversa usados\n",
+    "\n",
+    "* Se puede ver que el Método de Newton converge de forma más rápida y precisa que el Método del descenso del gradiente que hizo hasta diez mil iteraciones.\n",
+    "* La precisión de los dos métodos es aceptable. Es claro que también puede ser mejorada modificando algunos parámetros de los métodos."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cargando el URDF"
    ]
   },
