--- a/UR5_IK.ipynb
+++ b/UR5_IK.ipynb
@@ -10546,7 +10546,7 @@
     "        Parametros\n",
     "\n",
     "        - Xdeseado: Es un array de 3 espacios en donde se va a especificar las posiciones [x,y,z] deseadas\n",
-    "        - Qinicial: Es un array de 3 espacios con los valores ariculares iniciales del robot RRP\n",
+    "        - Qinicial: Es un array de 3 espacios con los valores ariculares iniciales del robot RRRRRRR\n",
     "        - L = Es un array de 4 espacios con las distancias de cada uno de los eslabones del robot\n",
     "        - alfa = Es un valor flotante que representa el 'step size' para algorimo de descenso del gradiente, por defecto es 0.2\n",
     "        - max_iter: Es el numero maximo de iteraciones que va a hacer el algoritmo, por defecto son 100\n",
